# lds-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  README.md  default.profdata  default.profraw  fib  fib.rs  temp_plot_gen.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: basic.rs  env_logger_example.rs  integer.rs  sphere_n.rs  tracing_example.rs
src/: ilds.rs  lds.rs  lds_n.rs  lds_n.trs  lds_n1.rs  lds_n2.rs  lds_n3.rs  lib.rs  low_discr_seq.cpp  low_discr_seq_n.cpp  main.py  main.rs  sphere_n.rs  temp.rs  test  test.cpp
