[package]
name = "lds-gen"
version = "0.1.0"
edition = "2024"
description = "Low-Discrepancy Sequence (LDS) Generator in Rust"
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
license = "MIT"
repository = "https://github.com/luk036/lds-rs"
readme = "README.md"
keywords = ["low-discrepancy", "quasi-monte-carlo", "halton", "van-der-corput", "numerical-integration"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.20"  # For thread-safe lazy initialization
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[dev-dependencies]
approx = "0.5"  # For floating point comparisons in tests
